<?xml version="1.0" encoding="utf-8"?>
<resources>
 
    <string name="app_name">Day Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
     
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >About</item>
        <item >Rate My Day-Pics</item>
        <item >Rate My Day-List</item>
        <item >Graphs</item>
        <item >Settings</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_about</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_list</item>
        <item>@drawable/ic_graphs</item>
        <item>@drawable/ic_settings</item>
    </array>
    
  
    <string-array name="rmd_numOfStars">
        <item>5</item>
        <item>7</item>
        <item>9</item>
    </string-array>
    	
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
 
    <!-- Home -->
    <string name="first_welcome">Welcome to Day Tracker</string>
    <string name="user_greeting">Hi Madhu, </string>
    <string name="enter_name">Your Name   </string>
 	<string name="enter_email">Your Email  </string>
 	<string name="button_begin">Let\'s Begin!  </string>
 
 
    <!-- RMD1 Actionbar -->
    <string name="create_note">Create Note</string>
    <string name="myday_trackmore">Track More</string>
    <string name="myday_trackless">Track Less</string>
    <string name="myday_notes">Create Note</string>
    <!-- RMD1 Write a Note -->
    <string name="notes_title">Write A Note</string>
    <!-- RMD1 Track More -->
    <string name="trackmore_title">Track More Categories</string>
    <string name="trackmore_dialog">Add new items to track.</string>
    <string name="trackmore_hint">Fill X in \'Rate my X today\'</string>
    <string name="trackmore_suggestions">Suggestions</string>
    <!-- RMD1 Track Less -->
    <string name="trackless_title">Select Categories to Remove</string>
    <string name="trackless_dialog">Write A Note</string>
    <!-- Settings -->
    <string name="notifications_text">Set The Time For Your Reminder</string>
    <string name="ratingstars_number">Set The Number Of Stars For Rating</string>
    
    <!-- RMD2 -->
    <string name="myday_title">How Was My Day?&#160;&#160;</string>
    
    <!-- About -->
    <string name="about_qn1">What does Day Tracker do?</string>
    <string name="about_ans1">Day Tracker is an Android app that helps you keep
         track of your daily activities. Everyday, you can rate how you felt about different
          activities during the day on a star-based rating system and even add notes such as a description of
           the activity, time of the event and the people you were accompanied with.
            Finally, you can rate your overall happiness during the day. Over time,
             Day Tracker will collect enough data to be able to find co-relations between
              your activities and your overall happiness level.</string>
    
    <string name="about_qn2">What is the purpose of doing so?</string>
    <string name="about_ans2">More happiness and mental wellness in the world! You can also see 
        a visualization of the changes in your happiness levels on the Graphs screen.</string>
    
    <string name="about_qn3">Which activities can be tracked?</string>
    <string name="about_ans3">Just about anything! Day Tracker provides you with 5 default activities : 
        hardwork, socializing, sleep, sports and hobbies. You can use the \'Plus\' and \'Into\' icons on 
        the Action Bar to add new or delete existing activities, respectively. Day Tracker also provides
        you with two ways to enter your data : Rate My Day-Pics and Rate My Day-List. You can choose
        whichever one you prefer from the menu.</string>
    
    <string name="about_qn4">Want more info?</string>
    <string name="about_ans4">Watch this video.</string>
    
    
</resources>