<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     	xmlns:tools="http://schemas.android.com/tools" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" >

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<TextView
        android:id="@+id/about_qn1"
        android:layout_marginTop="10dp"
        style="@style/TextColorRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_qn1"
        android:layout_gravity="center"
        android:textSize="20sp" />

<TextView
        android:id="@+id/about_ans1"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_ans1"
        android:layout_gravity="center"
        android:textSize="18sp" />

<TextView
        android:id="@+id/about_qn2"
        android:layout_marginTop="10dp"
        style="@style/TextColorRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_qn2"
        android:layout_gravity="center"
        android:textSize="20sp" />

<TextView
        android:id="@+id/about_ans2"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_ans2"
        android:layout_gravity="center"
        android:textSize="18sp" />

<TextView
        android:id="@+id/about_qn3"
        android:layout_marginTop="10dp"
        style="@style/TextColorRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_qn3"
        android:layout_gravity="center"
        android:textSize="20dp" />

<TextView
        android:id="@+id/about_ans3"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_ans3"
        android:layout_gravity="center"
        android:textSize="18dp" />

<TextView
        android:id="@+id/about_qn4"
        android:layout_marginTop="10dp"
        style="@style/TextColorRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_qn4"
        android:layout_gravity="center"
        android:textSize="20dp" />

<TextView
        android:id="@+id/about_ans4"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_ans4"
        android:layout_gravity="center"
        android:textSize="18dp" />
 <ImageView
        android:id="@+id/imageView1"
        android:layout_gravity="center_horizontal"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:src="@drawable/about_video" />

</LinearLayout>
</ScrollView>